--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 </head>
 
 <body>
-    <label for="class-select">Choose your class:</label>
     <select name="class" id="class-select">
-        <option value="">--Please choose an option--</option>
+        <option value="">--Choose your class--</option>
     </select>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
