--- a/index.html
+++ b/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lord of the Rings Online DPS Calculator</title>
-  <link rel="stylesheet" href="css/style.css">
-  <script src="js/script.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lord of the Rings Online DPS Calculator</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Lord of the Rings Online DPS Calculator</h1>
 
-  <!-- Race Dropdown -->
-  <label for="race-select">Choose your race:</label>
-  <div class="dropdown-container">
-    <img id="race-icon" src="" alt="Race Icon" style="display: none; width: 50px; height: 50px;">
-    <select name="race" id="race-select">
-      <option value="">--Please choose an option--</option>
+<h1>Lord of the Rings Online DPS Calculator</h1>
+
+<!-- Race Selection -->
+<div>
+    <label for="race-select">Choose your race:</label>
+    <select id="race-select">
+        <!-- Race options will be populated dynamically -->
     </select>
-  </div>
+    <img id="race-icon" src="" alt="Race Icon" onerror="this.src='path/to/default-race-icon.png';" />
+</div>
 
-  <!-- Class Dropdown -->
-  <label for="class-select">Choose your class:</label>
-  <div class="dropdown-container">
-    <img id="class-icon" src="" alt="Class Icon" style="display: none; width: 50px; height: 50px;">
-    <select name="class" id="class-select">
-      <option value="">--Please choose an option--</option>
+<!-- Class Selection -->
+<div>
+    <label for="class-select">Choose your class:</label>
+    <select id="class-select">
+        <!-- Class options will be populated dynamically -->
     </select>
-  </div>
+    <img id="class-icon" src="" alt="Class Icon" onerror="this.src='path/to/default-class-icon.png';" />
+</div>
 
+<script src="js/script.js"></script>
 </body>
 </html>
