--- a/index.html
+++ b/index.html
@@ -8,29 +8,21 @@
 </head>
 <body>
   <h1>Lord of the Rings Online DPS Calculator</h1>
+  
+  <label for="race-select">Choose your race:</label>
+  <select id="race-select">
+    <option value="">--Please choose an option--</option>
+  </select>
+  <img id="race-icon" alt="Race Icon" style="display:none; width: 40px; height: 40px;">
 
-  <div class="container">
-    <div class="select-container">
-      <div class="icon-container">
-        <img id="race-icon" src="" alt="Race Icon" />
-        <label for="race-select">Choose your race:</label>
-      </div>
-      <select id="race-select">
-        <option value="">--Please choose an option--</option>
-      </select>
-    </div>
+  <br><br>
 
-    <div class="select-container">
-      <div class="icon-container">
-        <img id="class-icon" src="" alt="Class Icon" />
-        <label for="class-select">Choose your class:</label>
-      </div>
-      <select id="class-select">
-        <option value="">--Please choose an option--</option>
-      </select>
-    </div>
-  </div>
-
+  <label for="class-select">Choose your class:</label>
+  <select id="class-select">
+    <option value="">--Please choose an option--</option>
+  </select>
+  <img id="class-icon" alt="Class Icon" style="display:none; width: 40px; height: 40px;">
+  
   <script src="js/script.js"></script>
 </body>
 </html>
