--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </div>
     <select id="class-select"></select>
     <span>|</span>
+    <label for="level-input">Level:</label>
     <input type="number" id="level-input" min="1" max="150" value="1">
   </div>
   <script src="js/script.js"></script>
